# leekwars-generator-c

./: .gitignore  ALPHAZERO_PLAN.md  CMakeLists.txt  COMPARISON_V1_V2.md  README.md  ROADMAP.md  build.bat  build.sh
include/: lw_action.h  lw_action_stream.h  lw_area.h  lw_attack.h  lw_attack_apply.h  lw_bulb_template.h  lw_catalog.h  lw_cell.h  lw_critical.h  lw_damage.h  lw_effect.h  lw_effect_dispatch.h  lw_effect_store.h  lw_effects.h  lw_entity.h  lw_entity_info.h  lw_features.h  lw_fight.h  lw_item.h  lw_legal.h  lw_los.h  lw_map.h  lw_movement.h  lw_obstacle_info.h  lw_order.h  lw_pathfinding.h  lw_rng.h  lw_state.h  lw_statistics.h  lw_summon.h  lw_team.h  lw_turn.h  lw_types.h  lw_util.h  lw_winner.h
include_v2/: lw_action_stream.h  lw_actions.h  lw_area.h  lw_cell.h  lw_chip.h  lw_constants.h  lw_effect.h  lw_effect_params.h  lw_entity.h  lw_generator.h  lw_leek.h  lw_map.h  lw_order.h  lw_outcome.h  lw_rng.h  lw_scenario.h  lw_start_order.h  lw_state.h  lw_stats.h  lw_weapon.h
src/: _compile_all.ps1  lw_action.c  lw_actions.c  lw_area.c  lw_attack.c  lw_attack_apply.c  lw_catalog.c  lw_chips.c  lw_critical.c  lw_damage.c  lw_effect.c  lw_effect_absolute_vulnerability.c  lw_effect_add_state.c  lw_effect_aftereffect.c  lw_effect_ally_killed_to_agility.c  lw_effect_antidote.c  lw_effect_attract.c  lw_effect_buff_agility.c  lw_effect_buff_resistance.c  lw_effect_dispatch.c  lw_effect_dmg.c  lw_effect_heal.c  lw_effect_kill.c  lw_effect_life_damage.c  lw_effect_multiply_stats.c  lw_effect_nova_damage.c  lw_effect_nova_vitality.c  lw_effect_poison.c  (+39 more)
(+120 files in other folders)
